# numero_a_letras_literal

./: .gitignore  README.md  numero_a_letras.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  tests.yml
src/numero_a_letra.egg-info/: PKG-INFO  SOURCES.txt
src/numero_a_letras/: __init__.py
src/numero_a_letras.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_numero_a_letras.py
