[project]
name = "numero_a_letra"
version = "0.0.1"
authors = [
  { name="Eugenio", email="lugezz@gmail.com" },
]
description = "Convierte un numero a su representacion en letras"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lugezz/numero_a_letras_literal"
Issues = "https://github.com/lugezz/numero_a_letras_literal/issues"